# skillaudit

./: .gitignore  README.md  pyproject.toml
reports/: modelcontextprotocol-server-filesystem-20260307-151629.json
sandbox/: Dockerfile
skillaudit/: __init__.py  ai_client.py  behavior_monitor.py  cli.py  config.py  downloader.py  extractor.py  log_analyzer.py  mcp_executor.py  mcp_server.py  models.py  report_generator.py  sandbox_runner.py  scenario_generator.py
tests/: __init__.py  test_extractor.py  test_report_generator.py
